--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+model-context-protocol/.DS_Store
+model-context-protocol/sqlite/chatbot/.DS_Store
+model-context-protocol/sqlite/.DS_Store
